--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,56 +20,14 @@ layout: splash
     <h3 class="archive__subtitle">Organized by</h3>
     <a href="https://www.circl.lu/"><img src="{{ site.url }}/images/logos/circl.png" /></a>
   </span>
-  <span style="width:40%; display:inline-block;">
-    <h3 class="archive__subtitle">Speakers dinner sponsored by </h3>
-    <a href="https://www.secureworks.com"><img src="{{ site.url }}/images/logos/Dell_SW.png" /></a> 
-  </span>
 </div>
 
 <div>
   <span style="width:40%; display:inline-block;">
-    <h3 class="archive__subtitle">Sponsored by</h3>
-    <a href="https://www.sans.org/emea"><img src="{{ site.url }}/images/logos/sans-emea-new.jpg" /></a>
-    <a href="http://www.deloitte.lu/"><img src="{{ site.url }}/images/logos/deloitte.png" /></a>
-    <a href="https://www.creditmutuel.fr/"><img src="{{ site.url }}/images/logos/cm.png" /></a>
-    <a href="https://www.doclerholding.com/en/main/"><img src="{{ site.url }}/images/logos/docler.jpg" /></a>
-    <a href="https://www.3CORESec.com/"><img src="{{ site.url }}/images/logos/banner-500-motto.png"/></a>
-    <a href="https://www.yeswehack.com/"><img src="{{ site.url }}/images/logos/yeswehack.png"/></a>
-    <a href="https://www.itrust.lu/"><img src="{{ site.url }}/images/logos/itrust_logo.png"/></a>
-    <a href="https://www.grantthornton.lu/en/"><img src="{{ site.url }}/images/logos/grant.jpg"/></a>
-    <a href="https://www.linkedin.com/in/fvter/"><img src="{{ site.url }}/images/logos/fvt.png"/></a>
-    <a href="https://www.imrim.lu/"><img src="{{ site.url }}/images/logos/imrim.png"/></a>
-    <a href="https://www.ses.com/"><img src="{{ site.url }}/images/logos/SES.png"/></a>
-    </span>
-    <span style="width:40%; display:inline-block;">
-    </span>
-  </div>
 
-<h3 class="archive__subtitle">CTF sponsoring by</h3>
+<h3 class="archive__subtitle">Book sponsoring by</h3>
 
-<a href="https://www.quarkslab.com/"><img src="{{ site.url }}/images/logos/quarkslab.jpg"/></a>
 <a href="https://www.randorisec.fr/"><img src="{{ site.url }}/images/logos/randori.png"/></a>
-
-<h3 class="archive__subtitle">Diversity scholarship support by</h3>
-
-
-<a href="https://www.3CORESec.com/"><img src="{{ site.url }}/images/logos/banner-500-motto.png"/></a>
-<a href="https://www.telindus.lu/"><img src="{{ site.url }}/images/logos/telindus.png"/></a>
-<a href="https://pentest-tools.com"><img src="{{ site.url }}/images/logos/PentestTools.png"/></a>
-<a href="https://intel.com"><img src="{{ site.url }}/images/logos/intel.png"/></a>
-
-<h3 class="archive__subtitle">Media sponsor support by</h3>
-
-<a href="https://connect.ed-diamond.com/MISC"><img src="{{ site.url }}/images/logos/misc.png" /></a><br />
-
-<h3 class="archive__subtitle">Supporter ticket by</h3>
-
-
-
-
-<h3 class="archive__subtitle">Internet provided by </h3>
-<a href="http://www.post.lu/"><img src="{{ site.url }}/images/logos/post.png" /></a><br />
-<a href="http://www.conostix.com/"><img src="{{ site.url }}/images/logos/conostix.png" /></a> <img src="{{ site.url }}/images/logos/Kappa_Data.png" /> <img src="{{ site.url }}/images/logos/ruckus-standard-logo.png" />
 
 <h3 class="archive__subtitle">Hosting provided by</h3>
 <a href="http://www.maehdros.com/"><img src="{{ site.url }}/images/logos/maehdros.png" /></a>
